<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">WearSense</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <string-array name="planets_array">
    <item>Mercury</item>
    <item>Venus</item>
    <item>Earth</item>
    <item>Mars</item>
    <item>Jupiter</item>
    <item>Saturn</item>
    <item>Uranus</item>
    <item>Neptune</item>
  </string-array>
  <string name="drawer_open">Open navigation drawer</string>
  <string name="drawer_close">Close navigation drawer</string>
  <string name="action_websearch">Web search</string>
  <string name="app_not_available">Sorry, there\'s no web browser available</string>
  <string name="switchMobileSDC">Handset SDC</string>
  <string name="switchWearSDC">Accessory SDC</string>
  <string name="mobilePaneTitle">Mobile Handset</string>
  <string name="lblPanelMobileTitle">Mobile Handset</string>
  <string name="lblPanelWearTitle">Wear Accessory</string>

  <string name="txtAccel">Accel: </string>

</resources>
